# zGr

./: CMakeLists.txt  README.md  compile.bat  main.cpp
engine/include/: engine.h  graphic_pipeline.h  renderer.h  screen.h
engine/src/: engine.cpp  graphic_pipeline.cpp  main.cpp  renderer.cpp  screen.cpp
scripts/editor/include/: Launcher.h  ProjectTemplate.h
scripts/editor/src/: Launcher.cpp  ProjectTemplate.cpp
scripts/serialize/include/: Serialize.h
scripts/serialize/src/: Serialize.cpp
shaders/: fragment_shader.frag  vertex_shader.vert
